@@ -187,7 +187,7 @@
         <a href="#dom.addevent">DOM.addEvent</a>
       </div>
       <div class="heading h3">
-        <a href="#dom.removeelement">DOM.removeElement</a>
+        <a href="#dom.removeevent">DOM.removeEvent</a>
       </div>
     </div>
   </div>
@@ -2385,10 +2385,10 @@ http://stackoverflow.com/questions/6348494/addeventlistener-vs-onclick
       <tr>
         <td class="docs"><div class="dox">
   <div class="summary">
-<div class="pilwrap" id="dom.removeelement">
+<div class="pilwrap" id="dom.removeevent">
   <h3>
-    <a href="#dom.removeelement" class="pilcrow">&#182;</a>
-    DOM.removeElement
+    <a href="#dom.removeevent" class="pilcrow">&#182;</a>
+    DOM.removeEvent
   </h3>
 </div>
 
