@@ -1096,7 +1096,7 @@
     };
 
     /**
-     * ### DOM.removeElement
+     * ### DOM.removeEvent
      *
      * Removes an event listener from an element (cross-browser)
      *
