@@ -368,7 +368,7 @@
         for (i in obj) {
             // It is not NULL and it is an object.
             // Even if it is an array we need to use CLONE,
-            // because `slice()` does not clone array of objects.
+            // because `slice()` does not clone arrays of objects.
             if (obj[i] && 'object' === typeof obj[i]) {
                 value = OBJ.clone(obj[i]);
             }
